# hs-curve25519

./: README.md  curve25519.cabal
benchmarks/: bench1.hs
src/Crypto/DH/: Curve25519.hs
src/cbits/: curve25519.c
src/cbits/include/: curve25519.h
tests/: properties.hs
